dc-app/main/default/objects/EventData__dlm/fields/eventmanageapp_Cost_c__c.field-meta.xml
<CustomField>
    <fullName>eventmanageapp_Cost_c__c</fullName>
    <label>Cost</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Cost</labelOverride>
        <masterLabel>Cost</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>