dc-app/main/default/objects/EventData__dlm/fields/eventmanageapp_Event_Datetime_c__c.field-meta.xml
<CustomField>
    <fullName>eventmanageapp_Event_Datetime_c__c</fullName>
    <label>Event Datetime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Event Datetime</labelOverride>
        <masterLabel>Event Datetime</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>